--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.9'
 
 services:
+  db:
+    image: postgres:16-alpine
+    container_name: squad-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: squad
+    ports:
+      - "5432:5432"
+    volumes:
+      - squad-data:/var/lib/postgresql/data
+    networks:
+      - squadnet
+
   frontend:
     build:
       context: ./front
@@ -11,6 +25,24 @@ services:
       - "3000:80"
     networks:
       - squadnet
+
+  backend:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    image: renekemalandua/squad-nest-api
+    container_name: squad-backend
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - ./api/.env
+    networks:
+      - squadnet
+
+volumes:
+  squad-data:
 
 networks:
   squadnet:
